crates/cribo/tests/snapshots/bundled_code@alias_transformation_test.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/alias_transformation_test/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
_cribo_captured = {}
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _ModuleType=_cribo.types.ModuleType, _captured=_cribo_captured):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False) or _getattr(module, '__initialized__', False) and _getattr(module, '_cribo_registered', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _ModuleType(spec.name)
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                fresh._cribo_fresh_life = True
                return fresh
            return module
        module = _ModuleType(spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _captured[binding] if binding in _captured else _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _getattr=getattr, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        record_snapshot = not _getattr(module, '_cribo_fresh_life', False) and not _getattr(module, '__initialized__', False) and (self._namespace is not None or self._entry[1] is not None)
        if init is None:
            if record_snapshot and key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if record_snapshot and key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('utils', None, 'utils', True)
_cribo_finder.register('utils.data_processor', None, None, False, {'process_data': 'process_data', 'format_output': 'format_output'})
_cribo_finder.register('utils.config_manager', None, None, False, {'load_config': 'load_config'})
_cribo_finder.register('utils.helpers', None, None, False, {'helper_func': 'helper_func', 'debug_print': 'debug_print'})
utils_data_processor = _cribo.types.SimpleNamespace(__name__='utils.data_processor', __doc__='\nData processing utilities module.\nUsed to test from-import alias transformations.\n')
utils = _cribo.types.SimpleNamespace(__name__='utils', __initializing__=False, __initialized__=False, __path__=[])
utils.data_processor = utils_data_processor
"""\nData processing utilities module.\nUsed to test from-import alias transformations.\n"""
def process_data(data_list):
    """Process a list of data by doubling each element."""
    return [x * 2 for x in data_list]
process_data.__module__ = 'utils.data_processor'
def format_output(processed_data):
    """Format processed data as a comma-separated string."""
    return ", ".join(map(str, processed_data))
format_output.__module__ = 'utils.data_processor'
utils_data_processor.format_output = format_output
utils_data_processor.process_data = process_data
utils_config_manager = _cribo.types.SimpleNamespace(__name__='utils.config_manager', __doc__='\nConfiguration management utilities.\nUsed to test from-import alias transformations.\n')
utils.config_manager = utils_config_manager
"""\nConfiguration management utilities.\nUsed to test from-import alias transformations.\n"""
def load_config(config_file):
    """Load configuration from a file (simulated)."""
    return {"file": config_file, "loaded": True, "settings": {"debug": False}}
load_config.__module__ = 'utils.config_manager'
utils_config_manager.load_config = load_config
utils_helpers = _cribo.types.SimpleNamespace(__name__='utils.helpers', __doc__='\nHelper utilities module.\nUsed to test mixed from-import scenarios (some aliased, some not).\n')
utils.helpers = utils_helpers
"""\nHelper utilities module.\nUsed to test mixed from-import scenarios (some aliased, some not).\n"""
def helper_func(input_str):
    """A helper function that processes a string."""
    return f"Processed: {input_str.upper()}"
helper_func.__module__ = 'utils.helpers'
def debug_print(message):
    """Debug printing function (will be imported with alias)."""
    print(f"[DEBUG] {message}")
debug_print.__module__ = 'utils.helpers'
utils_helpers.debug_print = debug_print
utils_helpers.helper_func = helper_func
_cribo_captured['process_data'] = process_data
_cribo_captured['format_output'] = format_output
_cribo_captured['load_config'] = load_config
_cribo_captured['helper_func'] = helper_func
_cribo_captured['debug_print'] = debug_print
"""\nTest case for alias transformation functionality.\n\nThis script demonstrates the issue where import aliases are not being transformed properly.\nWithout the transformer logic, the bundled output will contain both:\n1. Alias assignments (generated by generate_alias_assignments)\n2. Original import statements (that should be removed/transformed)\n\nThis creates redundant code and potentially confusing output.\n"""
j = _cribo.json
operating_system = _cribo.os
system_info = _cribo.sys
process_a = utils_data_processor.process_data
format_a = utils_data_processor.format_output
config_a = utils_config_manager.load_config
math = _cribo.math
hashlib = _cribo.hashlib
debug_a = utils_helpers.debug_print
def main():
    """Main function that uses the imported modules with their aliases."""
    data = _cribo.json.dumps({"test": "data"})
    print(f"JSON data: {data}")
    dir_hash = _cribo.hashlib.md5(b"test_directory").hexdigest()[:8]
    print(f"Current directory: /test/deterministic/{dir_hash}")
    env_var = _cribo.os.environ.get("CRIBO_TEST", "default_value")
    print(f"CRIBO_TEST environment: {env_var}")
    python_version_info = _cribo.sys.version_info
    print(f"Python version: {python_version_info.major}.{python_version_info.minor}")
    processed = process_a([1, 2, 3, 4, 5])
    formatted = format_a(processed)
    print(f"Processed and formatted: {formatted}")
    config = config_a("settings.json")
    print(f"Loaded config: {config}")
    result = _cribo.math.sqrt(16)
    deterministic_num = int(_cribo.hashlib.md5(b"alias_transformation_test").hexdigest()[:2], 16)
    print(f"Math result: {result}, Deterministic: {deterministic_num}")
    helper_result = helper_func("test")
    debug_a(f"Helper result: {helper_result}")
if __name__ == "__main__":
    main()
helpers = utils.helpers
config_manager = utils.config_manager
data_processor = utils.data_processor
