crates/cribo/tests/snapshots/bundled_code@all_variable_handling.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/all_variable_handling/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('simple_module', None, None, False, {'public_func': 'public_func'})
_cribo_finder.register('nested_package.utils', None, None, False, {'helper_func': 'helper_func'})
_cribo_finder.register('nested_package.submodule', None, None, False, {'sub_function': 'sub_function'})
_cribo_finder.register('nested_package', None, None, True, {'exported_from_init': 'exported_from_init'})
simple_module = _cribo.types.SimpleNamespace(__name__='simple_module')
def public_func():
    """A public function that should be exported."""
    return "Hello from public_func"
public_func.__module__ = 'simple_module'
CONSTANT = 42
simple_module.__all__ = ['public_func', 'CONSTANT']
simple_module.public_func = public_func
simple_module.CONSTANT = CONSTANT
nested_package_utils = _cribo.types.SimpleNamespace(__name__='nested_package.utils')
nested_package = _cribo.types.SimpleNamespace(__name__='nested_package', __initializing__=False, __initialized__=False, __path__=[])
nested_package.utils = nested_package_utils
def helper_func():
    """Helper function used by other modules"""
    return "helper result"
helper_func.__module__ = 'nested_package.utils'
nested_package_utils.helper_func = helper_func
nested_package_submodule = _cribo.types.SimpleNamespace(__name__='nested_package.submodule')
nested_package.submodule = nested_package_submodule
def sub_function():
    """Function from submodule"""
    return "Hello from submodule"
sub_function.__module__ = 'nested_package.submodule'
SUB_CONSTANT = "submodule_value"
nested_package_submodule.__all__ = ['sub_function', 'SUB_CONSTANT']
nested_package_submodule.sub_function = sub_function
nested_package_submodule.SUB_CONSTANT = SUB_CONSTANT
def exported_from_init():
    """Function exported from package __init__.py"""
    return f"From init, using helper: {helper_func()}"
exported_from_init.__module__ = 'nested_package'
nested_package.exported_from_init = exported_from_init
conflict_module = _cribo.types.SimpleNamespace(__name__='conflict_module')
message_1 = "from conflict_module"
SHARED_NAME = "conflict_module_version"
conflict_module.message = message_1
message = conflict_module.message
print("Testing simple module exports:")
print(f"public_func() = {public_func()}")
print(f"CONSTANT = {CONSTANT}")
print("\nTesting nested package exports:")
print(f"exported_from_init() = {exported_from_init()}")
print(f"sub_function() = {sub_function()}")
print("\nTesting conflict resolution:")
print(f"message = {message}")
print(f"\n'public_func' in simple_module.__all__ = {'public_func' in simple_module.__all__}")
print(f"'CONSTANT' in simple_module.__all__ = {'CONSTANT' in simple_module.__all__}")
sub = nested_package.submodule
print(f"\n'sub_function' in submodule.__all__ = {'sub_function' in sub.__all__}")
