crates/cribo/tests/snapshots/bundled_code@ast_rewrite_parameter_shadow.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewrite_parameter_shadow/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('models', None, None, False, {'User': 'User', 'Connection': 'Connection'})
models = _cribo.types.SimpleNamespace(__name__='models', __doc__='Models module containing classes that will be shadowed by parameters.')
"""Models module containing classes that will be shadowed by parameters."""
class User:
    """User class that will be shadowed by function parameters."""

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'models'), _cribo_f)[1])
    def __init__(self, name: str):
        self.name = name
        self.id = hash(name) % 10000

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'models'), _cribo_f)[1])
    def __repr__(self):
        return f"User(name={self.name!r}, id={self.id})"
User.__module__ = 'models'
class Connection:
    """Connection class that will be shadowed by function parameters."""

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'models'), _cribo_f)[1])
    def __init__(self, host: str, port: int):
        self.host = host
        self.port = port
        self.connected = False

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'models'), _cribo_f)[1])
    def connect(self):
        """Simulate connection."""
        self.connected = True
        return f"Connected to {self.host}:{self.port}"

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'models'), _cribo_f)[1])
    def __repr__(self):
        return f"Connection(host={self.host!r}, port={self.port}, connected={self.connected})"
Connection.__module__ = 'models'
models.Connection = Connection
models.User = User
"""Test fixture for parameter names shadowing global/class names.\n\nThis fixture demonstrates the pattern where function parameters shadow\nimportant module-level names (classes, functions, constants).\n"""
result = "global_result"
def process_user(User: "User") -> str:
    """Function with parameter shadowing the imported User class."""
    return f"Processing: {User.name}"
def create_connection(Connection: str) -> str:
    """Function with parameter shadowing the imported Connection class."""
    return f"Connection string: {Connection}"
def manipulate_result(result: int) -> int:
    """Function with parameter shadowing the global variable."""
    return result * 2
class Manager:
    """Class with methods that have shadowing parameters."""

    def __init__(self):
        self.users = []
        self.connections = []

    def add_user(self, User: "User") -> None:
        """Method with parameter shadowing the User class."""
        self.users.append(User)
        print(f"Added user: {User.name}")

    def add_connection(self, Connection: "Connection") -> None:
        """Method with parameter shadowing the Connection class."""
        self.connections.append(Connection)
        print(f"Added connection: {Connection.host}")

    def process_with_shadow(self, result: str) -> str:
        """Method with parameter shadowing the global variable."""
        global_val = globals()["result"]
        return f"Param: {result}, Global: {global_val}"
def complex_shadowing(User: type, Connection: callable, result: list) -> dict:
    """Function with multiple shadowing parameters of different types."""
    return {"user_type": User.__name__ if hasattr(User, "__name__") else str(User), "connection_callable": Connection() if callable(Connection) else None, "result_list": len(result) if isinstance(result, list) else 0}
def main():
    """Demonstrate the shadowing patterns."""
    user = User("Alice")
    conn = Connection("localhost", 5432)
    print(process_user(user))
    print(create_connection("postgres://localhost"))
    print(manipulate_result(10))
    manager = Manager()
    manager.add_user(user)
    manager.add_connection(conn)
    print(manager.process_with_shadow("parameter_value"))
    shadow_result = complex_shadowing(User=type("DynamicUser", (), {}), Connection=lambda: "dynamic_connection", result=[1, 2, 3])
    print(f"Complex shadowing result: {shadow_result}")
    print(f"Global result value: {result}")
    print(f"User class accessible: {User}")
    print(f"Connection class accessible: {Connection}")
if __name__ == "__main__":
    main()
